--- a/prediction-learing-and-game/hw2/ref.bib
+++ b/prediction-learing-and-game/hw2/ref.bib
@@ -8,3 +8,21 @@
   year      = {2012},
   publisher = {JMLR. org}
 }
+
+@article{cesa2012new,
+  title   = {A new look at shifting regret},
+  author  = {Cesa-Bianchi, Nicolo and Gaillard, Pierre and Lugosi, G{\'a}bor and Stoltz, Gilles},
+  journal = {arXiv preprint arXiv:1202.3323},
+  year    = {2012}
+}
+
+@article{herbster1998tracking,
+  title     = {Tracking the best expert},
+  author    = {Herbster, Mark and Warmuth, Manfred K},
+  journal   = {Machine learning},
+  volume    = {32},
+  number    = {2},
+  pages     = {151--178},
+  year      = {1998},
+  publisher = {Springer}
+}
