--- a/prediction-learing-and-game/hw2/ref.bib
+++ b/prediction-learing-and-game/hw2/ref.bib
@@ -26,3 +26,37 @@
   year      = {1998},
   publisher = {Springer}
 }
+
+@inproceedings{hazan2007adaptive,
+  title     = {Adaptive algorithms for online decision problems},
+  author    = {Hazan, Elad and Seshadhri, Comandur},
+  booktitle = {Electronic colloquium on computational complexity (ECCC)},
+  volume    = {14},
+  number    = {088},
+  year      = {2007}
+}
+
+@inproceedings{hazan2009efficient,
+  title     = {Efficient learning algorithms for changing environments},
+  author    = {Hazan, Elad and Seshadhri, Comandur},
+  booktitle = {Proceedings of the 26th annual international conference on machine learning},
+  pages     = {393--400},
+  year      = {2009}
+}
+
+
+@inproceedings{pmlr-v80-zhang18o,
+  title     = {Dynamic Regret of Strongly Adaptive Methods},
+  author    = {Zhang, Lijun and Yang, Tianbao and rong jin and Zhou, Zhi-Hua},
+  booktitle = {Proceedings of the 35th International Conference on Machine Learning},
+  pages     = {5882--5891},
+  year      = {2018},
+  editor    = {Dy, Jennifer and Krause, Andreas},
+  volume    = {80},
+  series    = {Proceedings of Machine Learning Research},
+  month     = {10--15 Jul},
+  publisher = {PMLR},
+  pdf       = {http://proceedings.mlr.press/v80/zhang18o/zhang18o.pdf},
+  url       = {https://proceedings.mlr.press/v80/zhang18o.html},
+  abstract  = {To cope with changing environments, recent developments in online learning have introduced the concepts of adaptive regret and dynamic regret independently. In this paper, we illustrate an intrinsic connection between these two concepts by showing that the dynamic regret can be expressed in terms of the adaptive regret and the functional variation. This observation implies that strongly adaptive algorithms can be directly leveraged to minimize the dynamic regret. As a result, we present a series of strongly adaptive algorithms that have small dynamic regrets for convex functions, exponentially concave functions, and strongly convex functions, respectively. To the best of our knowledge, this is the first time that exponential concavity is utilized to upper bound the dynamic regret. Moreover, all of those adaptive algorithms do not need any prior knowledge of the functional variation, which is a significant advantage over previous specialized methods for minimizing dynamic regret.}
+}
